# vtrc

./: .gitignore  .gitmodules  CMakeLists.txt  FindAsio.cmake  LICENSE  LICENSE.txt  README.md  build-howto.txt  cond_vars.impl  config.h  cxx11_check.cmake  cxx11_detect.cmake  msvc_override.cmake  tmp.cxx  vtrc-general-config.h  vtrc-general-config.h.in  vtrc-general-config.h_  vtrc-import.cmake.in
draft/: CMakeLists.txt
draft/client/: CMakeLists.txt  main.cpp
draft/common/: CMakeLists.txt  async-transport-point.hpp  ioread.cpp  transport-layer.cpp  transport-layer.h  vtrc-signal-declaration.h
draft/server/: CMakeLists.txt  main.cpp
examples/calculator/: CMakeLists.txt  README.md
examples/calculator/client/: CMakeLists.txt  calculator-iface.h  calculator-impl.cpp  calculator_impl.cpp  main.cpp
examples/calculator/protocol/: CMakeLists.txt  calculator.proto
examples/calculator/server/: CMakeLists.txt  main.cpp
examples/lukki-db/protocol/: CMakeLists.txt  lukkidb.proto
examples/lukki-db/server/: CMakeLists.txt  lukki-db-application.cpp  lukki-db-application.h  main.cpp  server.cpp
examples/proxy-test/: CMakeLists.txt  README.md
examples/proxy-test/client/: main.cpp
examples/proxy-test/protocol/: client-calls.proto  proxy-calls.proto
examples/proxy-test/server/: CMakeLists.txt  main.cpp
examples/remote-fs/: CMakeLists.txt  README.md
examples/remote-fs/client/: CMakeLists.txt  client.cpp  main.cpp  remote-fs-iface.h  remote-fs-impl.cpp  rfs-calls.h  rfs-directory-list.cpp  rfs-directory-tree.cpp  rfs-iface.h  rfs-impl.cpp  rfs-mkdir-del.cpp  rfs-pull-file.cpp  rfs-pull-tree.cpp  rfs-push-file.cpp  rfs-push-tree.cpp  utils.cpp  utils.h
examples/remote-fs/protocol/: CMakeLists.txt  remotefs.proto
examples/remote-fs/server/: CMakeLists.txt  main.cpp  remote-fs-impl.cpp  remote-fs-impl.h  server.cpp
examples/stress/: CMakeLists.txt  README.md  start.sh
examples/stress/client/: CMakeLists.txt  client.cpp  events-impl.cpp  events-impl.h  main.cpp  ping-impl.cpp  ping-impl.h  stress-iface.h  stress-impl.cpp
examples/stress/protocol/: CMakeLists.txt  stress.proto
examples/stress/server/: CMakeLists.txt  main.cpp  server.cpp  stress-application.cpp  stress-application.h  stress-service-impl.cpp  stress-service-impl.h
lib/vtrc/common/: CMakeLists.txt  call-context.cpp  call-keeper.cpp  condition-queues.h  connection-iface.cpp  data-queue.cpp  erseefor.h  exception.cpp  hash-none.cpp  lowlevel-protocol-default.cpp  protocol-defaults.cpp  protocol-layer.cpp  protocol-layer.h  result-codes.h  rpc-channel.cpp  rpc-controller.cpp  rpc-controller.h  sizepack-policy.h  thread-pool.cpp  transformer-chacha.cpp  transformer-create.cpp  transformer-erseefor.cpp  transformer-none.cpp
lib/vtrc/common/hash/: crc.cpp  crc32-impl.h  create.cpp  none.cpp  sha2.cimpl  sha2.cpp
lib/vtrc/common/proto-helper/: message-helper.cpp  message-helper.h  message-utilities.cpp  message-utilities.h
lib/vtrc/common/protocol-base/: vtrc-auth.proto  vtrc-errors.proto  vtrc-rpc-lowlevel.proto  vtrc-rpc-options.proto  vtrc-service.proto  vtrc-types.proto
vtrc-client-base/: CMakeLists.txt  vtrc-client-channel.h  vtrc-client-stream-impl.h  vtrc-client-tcp.cpp  vtrc-client-tcp.h  vtrc-client-transport.cpp  vtrc-client-unix-local.cpp  vtrc-client-unix-local.h  vtrc-client-win-pipe.cpp  vtrc-client-win-pipe.h  vtrc-client.cpp  vtrc-client.h  vtrc-protocol-layer-c.cpp  vtrc-protocol-layer-c.h  vtrc-rpc-channel-c.cpp  vtrc-rpc-channel-c.h  vtrc-rpc-channel.cpp  vtrc-rpc-channel.h
vtrc-common/: CMakeLists.txt  vtrc-call-context.cpp  vtrc-call-context.h  vtrc-call-keeper.cpp  vtrc-call-keeper.h  vtrc-closure-holder.h  vtrc-closure.h  vtrc-condition-queues.h  vtrc-conditional-queues.h  vtrc-connection-iface.cpp  vtrc-connection-iface.h  vtrc-connection-list.cpp  vtrc-connection-list.h  vtrc-crc-hasher.cpp  vtrc-data-queue.cpp  vtrc-data-queue.h  vtrc-default-lowlevel-protocol.cpp  vtrc-default-lowlevel-protocol.h  vtrc-delayed-call.h  vtrc-enviroment.cpp  vtrc-enviroment.h  vtrc-erseefor.h  vtrc-exception.cpp  vtrc-exception.h  vtrc-fake-hasher.cpp  vtrc-hash-crc.cpp  vtrc-hash-create.cpp  vtrc-hash-iface.h  vtrc-hash-none.cpp  vtrc-hash-sha2.cpp  vtrc-hasher-crc.cpp  vtrc-hasher-create.cpp  vtrc-hasher-iface.h  vtrc-hasher-impls.h  vtrc-hasher-none.cpp  vtrc-hasher-sha2.cpp  vtrc-lowlevel-protocol-default.cpp  vtrc-memory.h  vtrc-monotonic-timer.h  vtrc-mutex-typedefs.h  (+42 more)
vtrc-common/config/: vtrc-atomic.h  vtrc-bind.h  vtrc-chrono.h  vtrc-condition-variable.h  vtrc-conditional-variable.h  vtrc-function.h  vtrc-memory.h  vtrc-mutex.h  vtrc-random.h  vtrc-ref.h  vtrc-stdint.h  vtrc-thread.h
vtrc-common/crypt/chacha/: chacha-regs.c  ecrypt-config.h  ecrypt-sync.h
vtrc-common/hash/: sha2-traits.h  sha2.c  sha2.cimpl  sha2.h  sha2.himpl
vtrc-common/proto-helper/: message-helper.cpp  message-helper.h  message-utilities.cpp  message-utilities.h
vtrc-common/protocol-base/: vtrc-auth.proto  vtrc-errors.proto  vtrc-rpc-lowlevel.proto  vtrc-rpc-options.proto  vtrc-service.proto  vtrc-types.proto
vtrc-server/: CMakeLists.txt  vtrc-application-iface.h  vtrc-application.cpp  vtrc-application.h  vtrc-channels.cpp  vtrc-channels.h  vtrc-common-channel.cpp  vtrc-common-channel.h  vtrc-connection-closure.h  vtrc-connection-default.cpp  vtrc-connection-iface.h  vtrc-connection-impl.h  vtrc-connection-list.cpp  vtrc-connection-list.h  vtrc-endpoint-base.cpp  vtrc-endpoint-base.h  vtrc-endpoint-iface.h  vtrc-endpoint-impl.h  vtrc-endpoint-tcp.cpp  vtrc-endpoint-tcp.h  vtrc-endpoint-unix-local.cpp  vtrc-endpoint-unix-local.h  vtrc-endpoint-win-pipe.cpp  vtrc-endpoint-win-pipe.h  vtrc-endpoints.cpp  vtrc-listener-custom.cpp  vtrc-listener-impl.h  vtrc-listener-local.cpp  vtrc-listener-local.h  vtrc-listener-ssl.cpp  vtrc-listener-tcp.cpp  vtrc-listener-tcp.h  vtrc-listener-udp.cpp  vtrc-listener-unix-local.cpp  vtrc-listener-unix-local.h  vtrc-listener-win-pipe.cpp  vtrc-listener-win-pipe.h  vtrc-listener.cpp  vtrc-listener.h  vtrc-protocol-layer-s.cpp  (+5 more)
vtrc-test-server/: CMakeLists.txt  main.cpp
(+268 files in other folders)
